fixed carousel slide title spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,7 @@ h2, .h2 {
         .carousel-slide-title {
             font-family: 'quiet-sans', sans-serif !important;
             font-weight: 600;
+            margin-bottom: 16px;
         }
     }
 }
